2004-08-22  Wakaba  <wakaba@suika.fam.cx>

	* idl2dis.pl (register_required_module): Top-level element type
	name "Type" and "TypeAlias" changed to "DataType" and
	"DataTypeAlias".

	* dis2pm.pl (perl_code_source): New function.

2004-08-21  Wakaba  <wakaba@suika.fam.cx>

	* ChangeLog: New file.

	* Makefile, DOMMain.dis, DOMCore.dis, DOMXML.dis, dis2pm.pl, idl2dis.pl:
	New files (Moved from ../Markup/XML/DOM/).
	
