@@ -22,7 +22,7 @@ Module:
   @License:
      license:Perl
   @Date.RCS:
-     $Date: 2004/08/29 13:34:38 $
+     $Date: 2004/08/30 07:53:48 $
 
   @Require:
     @@Module:
@@ -51,6 +51,12 @@ Module:
       @@@Description:
         @@@@lang:en
         @@@@@: Dummy.
+
+  @ConditionDef:
+    @@Name: DOM1
+  @ConditionDef:
+    @@Name: DOM2
+  @NormalCondition: DOM2
 
 Exception:
   @Name: ManakaiDOMImplementationException
