@@ -1,3 +1,12 @@
+2004-08-30  Wakaba  <wakaba@suika.fam.cx>
+
+	* dis2pm.pl: Versioned implementation of "IF" supported (see
+	also Manakai Development Memo : 2004-08-29
+	<http://suika.fam.cx/~wakaba/-temp/wiki/wiki?manakai%2F%2F%A5%E1%A5%E2%2F%2F2004-08-29>).
+
+	* idl2dis.pl (register_required_module): ISA is now
+	converted to elements, not a list attribute.
+
 2004-08-22  Wakaba  <wakaba@suika.fam.cx>
 
 	* idl2dis.pl (register_required_module): Top-level element type
